style: удалены отсутпы между методами/ fix: добавлена пагинация в контроллеры, в исключения добавлен ResponseStatus